# flex

./: .gitignore  CMakeLists.txt  COPYING  Makefile.am  README.md  configure.ac  index.html  mac_os.md  packages  params.json  ubuntu.md
UI/backend/: README.md
UI/frontend/: .gitignore  README.md  package-lock.json  package.json
UI/frontend/src/: App.vue  main.js
UI_old/: teleport_control
UI_old/gui/: teleport_gui.py
UI_old/gui/templates/: deposits.html  send_deposit_address.html
UI_old/old/: egt
UI_old/old/configuration/: messages.pot
contrib/gitian-descriptors/: gitian-linux.yml  gitian-win.yml
doc/: coding.md
python/: cbf  cbt  daemonize  flex_cbt_plugin  flex_notary  flex_payment_processor  flexcontrol  inheritance.py  setup.py
python/configuration/: configure.py  defaults.py
python/explorer/: explorer.py
python/flex/: __init__.py
python/interactive_payment_processor/: interactive_payment_processor.py
src/: Makefile.am  Makefile.include  define.h  flex-cli-res.rc  flex-cli.cpp  flex-res.rc  flexd-res.rc  flexd.cpp  leveldbwrapper.cpp  leveldbwrapper.h  log.h  vector_tools.h
src/base/: BitcoinAddress.cpp  BitcoinAddress.h  allocators.cpp  base58.cpp  base58.h  base64.h  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  clientversion.h  core.cpp  core.h  noui.cpp  noui.h  protocol.cpp  protocol.h  script.cpp  script.h  serialize.h  sync.cpp  sync.h  tinyformat.h  ui_interface.h  util.cpp  util.h  util_args.cpp  util_args.h  util_compare.h  util_data.cpp  util_data.h  util_file.cpp  util_file.h  util_format.cpp  util_format.h  util_hex.cpp  util_hex.h  util_init.cpp  util_init.h  util_log.cpp  (+9 more)
src/compat/: glibc_compat.cpp
src/credits/: Credit.cpp  Credit.h  CreditBatch.cpp  CreditBatch.h  CreditInBatch.cpp  CreditInBatch.h  MinedCredit.cpp  MinedCredit.h  MinedCreditMessage.cpp  MinedCreditMessage.h  SignedTransaction.cpp  SignedTransaction.h  UnsignedTransaction.cpp  UnsignedTransaction.h  credits.cpp  credits.h  creditsign.h  creditutil.cpp  creditutil.h
src/crypto/: 25519points.h  bignum.h  bignum_hashes.h  crypter.cpp  crypter.h  flexcrypto.cpp  flexcrypto.h  hash.cpp  hash.h  hashtrees.h  key.cpp  key.h  point.cpp  point.h  polynomial.cpp  polynomial.h  secp256k1point.h  shorthash.h  signature.h  teleportcrypto.cpp  teleportcrypto.h  uint256.h
src/crypto/25519/: curve25519-donna-64bit.h  curve25519-donna-helpers.h  ed25519-donna-impl-base.h  ed25519-donna.h  ed25519.c  ed25519.cpp  ed25519.h  modm-donna-64bit.h  test  test.cpp
src/crypto/25519/tests/: gmon.out  test_c25519point.cpp  test_ed25519point.cpp
src/currencies/: currencies.cpp  currencies.h
src/database/: DiskDataStore.h  data.h  datastore.h  keystore.cpp  keystore.h  memdb.cpp  memdb.h
src/deposit/: deposit_messages.h  deposit_secret.cpp  deposit_secret.h  deposits.cpp  deposits.h  disclosure.cpp  disclosure_messages.h  transfer.cpp  transfer_messages.h  withdraw.cpp  withdrawal_messages.h
src/flexnode/: MainFlexNode.cpp  MainFlexNode.h  MockFlexNode.h  MockInit.cpp  MockInit.h  batchchainer.cpp  batchchainer.h  calendar.cpp  calendar.h  eventnotifier.cpp  eventnotifier.h  flexnode.cpp  flexnode.h  init.cpp  init.h  main.cpp  main.h  main_process_messages.cpp  main_send_messages.cpp  main_signals.cpp  message_handler.h  orphanage.h  schedule.h  wallet.cpp  wallet.h
src/initialize/: datamessages.cpp  datamessages.h  dataserver.cpp  dataserver.h  downloader.cpp  downloader.h
src/leveldb/db/: version_set.cc
src/leveldb/util/: arena.h  coding.h  comparator.cc  mutexlock.h
src/mining/: pit.cpp  pit.h  work.cpp  work.h
src/net/: addrman.cpp  addrman.h  alert.cpp  alert.h  net.cpp  net.h  net_addresses.cpp  net_addresses.h  net_caddrdb.cpp  net_caddrdb.h  net_cleanup.cpp  net_cnetmessage.cpp  net_cnetmessage.h  net_cnode.cpp  net_cnode.h  net_connections.cpp  net_connections.h  net_externalip.cpp  net_externalip.h  net_messagehandler.cpp  net_messagehandler.h  net_relay.cpp  net_relay.h  net_services.cpp  net_services.h  net_signals.cpp  net_signals.h  net_sockets.cpp  net_sockets.h  net_startstop.cpp  net_startstop.h  net_sync.cpp  net_sync.h  net_upnp.cpp  netbase.cpp  netbase.h  resourcemonitor.cpp  resourcemonitor.h
src/relays/: inheritance.py  relay_admission.cpp  relay_admission.h  relay_inheritance.cpp  relay_inheritance.h  relay_messages.cpp  relay_messages.h  relays.cpp  relays.h  relaystate.cpp  relaystate.h  successionsecret.cpp  successionsecret.h
src/rpc/: rpcblockchain.cpp  rpcclient.cpp  rpcclient.h  rpcdump.cpp  rpcmining.cpp  rpcmisc.cpp  rpcnet.cpp  rpcobjects.cpp  rpcobjects.h  rpcprotocol.cpp  rpcprotocol.h  rpcrawtransaction.cpp  rpcserver.cpp  rpcserver.h  rpcwallet.cpp
src/teleportnode/: MockInit.cpp  MockInit.h  batchchainer.cpp  batchchainer.h  calendar.cpp  calendar.h  eventnotifier.cpp  eventnotifier.h  flexnode.cpp  flexnode.h  init.cpp  init.h  main.cpp  main.h  main_process_messages.cpp  main_send_messages.cpp  main_signals.cpp  message_handler.h  orphanage.h  schedule.h  wallet.cpp  wallet.h
src/test/: test_creditnode.h  test_encrypted.cpp  test_handler.cpp  test_signtx.cpp  test_succession.cpp  testcrypto.cpp  testpoint.cpp  testsign.cpp
src/trade/: market.cpp  market.h  relay.cpp  relay.h  thirdparty.cpp  thirdparty.h  trade.cpp  trade.h  trade_messages.cpp  trade_messages.h  trader.cpp  trader.h  tradesecret.h
src/twist/: alloc.h  scrypt-jane-twist.h  twist-jane.h  twist.h  twist_example.cpp  twistcpp.h
src/twist/code/: scrypt-jane-chacha.h  scrypt-jane-mix_salsa64.h  scrypt-jane-portable-x86.h  scrypt-jane-portable.h  scrypt-jane-romix-basic.h  scrypt-jane-romix.h  scrypt-jane-salsa64.h  twist-romix.h  twist-salsa64.h  twist-template.h
test/: CMakeLists.txt  Makefile.am_
test/bitcoin_tests/: test_bitcoin.cpp
test/flex_tests/: CMakeLists.txt
webapp/backend/: MANIFEST.in  teleport_gui
webapp/frontend/: README.md  package-lock.json  package.json
webapp/old/: cbt
webapp/teleport_python_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
webapp_old/old/: MANIFEST.in  daemonize  setup.py
(+727 files in other folders)
